# Azure-Architect-Assistant

./: .dockerignore  .env.example  .flake8  .gitignore  .hintrc  .importlinter  .oxlintrc.json  .oxlintrc.json.bak  .prettierignore  .uv.toml  ARCHITECTURE.md  AZURE_OPENAI_CREDENTIALS.md  CHANGELOG.md  INGESTION_VERIFICATION_ANALYSIS.json  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  UV_MIGRATION_GUIDE.md  WAF_IMPLEMENTATION_SUMMARY.md  WAF_UPDATE_SUMMARY.md  _diag.py  _diag_deploy.py  _diag_output2.txt  analyze_db.py  analyze_sibling_db.py  auto_approve_docs.py  check_caf_status.py  check_db.py  check_db_path.py  check_eval_mapping.py  check_eval_subfolder.py  check_legacy_project_sql.py  check_local_db.py  check_roger_db_temp.py  check_roger_slugs.py  check_roger_state_24.py  check_schema.py  check_settings.py  claude-sonnet-4-5.yml  create_legacy_data.py  (+55 more)
.github/: CODEOWNERS  copilot-instructions.md  copilot-typescript-instruction.md  python-instruction.md  terraform-instruction.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_policy_change.md  feature_request.md  tech_debt.md
.github/agents/: copilot-instructions.md  grumpy.agent.md  react.perf.agent.md  refactor.agent.md  refactor.backend.agent.md  refactor.frontend.agent.md
.github/hooks/: lint-on-stop.json
.github/prompts/: plan-unifiedStateTracking.prompt.md
.github/workflows/: architecture.yml  ci.yml  grumpy-reviewer.md
.playwright-cli/: page-2026-04-10T10-07-46-309Z.yml
.playwright-mcp/: page-2026-04-16T18-48-00-931Z.yml
.secretkeeper/: vault.enc
.specify/memory/: constitution.md
archive/ingestion_legacy/: README.md  executor.py  manager.py
archive/legacy_poc/: README.md
archive/legacy_rag/: query_wrapper.py
archive/legacy_routers/: _query_old.py
archive/migrations/: README.md  migrate_data.py
backend/: .env.example  .eslintrc.json  CAF_TESTS_README.md  CAF_TESTS_SUMMARY.md  SETUP_TESTS.md  alembic.ini  alembic_ingestion.ini  debug_crawler.py  error.txt  install_test_deps.ps1  install_test_deps.sh  package.json  requirements.txt  run_caf_tests.py  test_caf_pause_resume.py  test_ingestion_api.py  test_router_migration.py  tsconfig.json  validate_ingestion.py  validate_tests.py
backend/app/: database.py  dependencies.py  lifecycle.py  main.py  projects_database.py  service_registry.py  services.py
backend/config/: __init__.py  ingestion.config.json  kb_defaults.json  settings.py
backend/data/: kb-sources.json  models_cache.json  openai_models_cache.json  projects.db  projects.db-journal  runtime_ai_selection.json
backend/migrations/: env.py
backend/scripts/: backfill_waf.py  create_test_legacy_data.py  import_waf_templates_from_mcp.py  mark_kbs_completed.py  migrate_add_phase_columns.py  migrate_caf_to_ids.py  recompute_job_statuses.py
backend/services/: __init__.py
backend/src/: db.ts  index.ts  logger.ts
backend/tests/: __init__.py  conftest.py  test_aaa_e2e_runner_utils.py  test_adr_lifecycle_service.py  test_agent_runtime_clarify.py  test_agent_runtime_extract_requirements.py  test_analyze_docs_smoke.py  test_artifact_persistence_and_extraction.py  test_budget_improvements.py  test_candidate_architecture_schema.py  test_clarification_planner_worker.py  test_clarification_resolution_worker.py  test_compaction_service.py  test_constitution_and_prompt_quality.py  test_diagram_quality.py  test_intent_classifier.py  test_langgraph_adapter_thread_id.py  test_llm_service_json_mode.py  test_merge_updates_conflicts.py  test_orchestrator.py  test_orchestrator_integration.py  test_orchestrator_unit.py  test_pending_change_briefing_service.py  test_pending_changes_merge_service.py  test_projects_database_migrations.py  test_quality_gate_loop.py  test_requirements_extraction_entry_service.py  test_requirements_extraction_foundation.py  test_requirements_extraction_router.py  test_requirements_extraction_worker.py  test_research_and_pricing_tools.py  test_stage_contracts.py  test_state_manager.py  test_tool_error_handling.py  test_trace_router.py  test_workflow_result_contract.py
data/knowledge_bases/: config.json
docs/: AGENT_ACTIVATION_GUIDE.md  AGENT_ENHANCEMENT_IMPLEMENTATION_PLAN.md  AGENT_ORCHESTRATION_REFACTORING_TASKS.md  AGENT_REVIEW_AND_RECOMMENDATIONS.md  AI_SERVICE_REFACTORING.md  BACKEND_ANALYSIS_AND_RECOMMENDATIONS.md  BACKEND_REFACTORING_COMPLETED.md  BACKEND_REFERENCE.md  BACKLOG.md  CODE-CLEANUP.md  COMPONENT-EXTRACTION.md  COMPONENTS_STRUCTURE.md  DEPRECATIONS_SCAN.md  DEVELOPMENT_GUIDE.md  EMBEDDING_INDEXING_SEPARATION.md  ENVIRONMENT_CONFIG.md  FRONTEND_INGESTION_IMPLEMENTATION.md  FRONTEND_REDESIGN_COMPLETE.md  FRONTEND_REDESIGN_PLAN.md  FRONTEND_REFACTORING_SUMMARY.md  FRONTEND_REFERENCE.md  HEADER_PROJECT_SELECTOR_PLAN.md  IDE_WORKSPACE_TABS_SPEC.md  INDEXER_PERFORMANCE_ANALYSIS.json  INGESTION_API.md  INGESTION_PROCESS.md  INGESTION_REFACTORING_PLAN.md  KB_INGESTION_PROGRESS.md  KB_INGESTION_REFACTORING_PROPOSAL.md  LANGGRAPH_MIGRATION_COMPLETE.md  LANGGRAPH_MIGRATION_PLAN.md  MCP_OPERATIONS_REFACTORING.md  MIGRATION_SUMMARY.md  MULTI_AGENT_ARCHITECTURE.md  MULTI_KB_IMPLEMENTATION.md  P1_IMPLEMENTATION_COMPLETE.md  PAUSE_RESUME_IMPLEMENTATION.md  PAUSE_RESUME_TESTING_GUIDE.md  PERFORMANCE_REMEDIATION_PLAN.md  PHASE1_COMPLETION_SUMMARY.md  (+31 more)
docs/agents/: README.md  (+5 more)
frontend/: .eslintrc.json  index.html  knip.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
python-service/: .env.example  README.md  check_schema.py  requirements.txt  verify_migrated_data.py
scripts/: audit_project_state_blob.py  backfill_waf.py  backup-data.ps1  blue_ticket.json  chat_with_agent.py  check-docs-governance.ps1  check_horizontal_module_freeze.py  create_and_analyze.py  debug_imports.py  langgraph_dialogue_test.py  ligneofcode.ps1  maintain_checklists.py  migrate_arch_inputs.py  migrate_project_state_components.py  project_chat.py  run-python-service.ps1  test_dialogue.py  test_phase3_cost_estimator.py  test_phase3_full_system.py  test_phase3_saas_advisor.py  tmp_pydantic_dump.py
waf_storage_clean/: build_info.json
(+1689 files in other folders)
