[project]
name = "azure-architect-assistant"
version = "4.0.0"
description = "Azure Architecture Assistant with FastAPI backend and React frontend"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "ISC" }
keywords = ["azure", "architecture", "assistant", "fastapi", "react"]

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "aiosqlite==0.20.0",
    "alembic>=1.13.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "async-timeout>=4.0.0,<6.0.0",
    "attrs==25.4.0",
    "Automat==25.4.16",
    "babel==2.17.0",
    "banks==2.2.0",
    "beautifulsoup4==4.12.3",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "chromedriver-autoinstaller==0.6.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "courlan==1.3.2",
    "cryptography==46.0.3",
    "cssselect==1.3.0",
    "dataclasses-json==0.6.7",
    "dateparser==1.2.2",
    "defusedxml==0.7.1",
    "Deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.5",
    "feedfinder2==0.0.4",
    "feedparser==6.0.12",
    "filelock==3.20.0",
    "filetype==1.2.0",
    "firecrawl-py==4.9.0",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "greenlet==3.2.4",
    "griffe==1.15.0",
    "h11==0.16.0",
    "html2text==2024.2.26",
    "htmldate==1.9.4",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperlink==21.0.0",
    "idna==3.11",
    "incremental==24.7.2",
    "itemadapter==0.12.2",
    "itemloaders==1.3.2",
    "jieba3k==0.35.1",
    "Jinja2==3.1.6",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "joblib==1.5.2",
    "jusText==3.0.2",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "llama-cloud>=0.1.35",
    "llama-index-agent-openai",
    "llama-index-cli",
    "llama-index-core",
    "llama-index-embeddings-openai",
    "llama-index-indices-managed-llama-cloud",
    "llama-index-instrumentation",
    "llama-index-llms-openai",
    "llama-index-multi-modal-llms-openai",
    "llama-index-program-openai",
    "llama-index-question-gen-openai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "llama-index-readers-web",
    "llama-index-readers-youtube-transcript",
    "llama-index-workflows",
    "llama-parse",
    "lxml==6.0.2",
    "lxml_html_clean==0.4.3",
    "markdownify==1.2.2",
    "MarkupSafe==3.0.3",
    "marshmallow==3.26.1",
    "mcp>=1.0.0",
    "multidict==6.7.0",
    "mypy_extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "newspaper3k==0.2.8",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "openai>=1.81.0,<2.0.0",
    "outcome==1.3.0.post0",
    "oxylabs==2.0.0",
    "packaging>=23.2,<26.0",
    "pandas==2.2.3",
    "plantuml>=0.3.0",
    "parsel==1.10.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "playwright==1.56.0",
    "propcache==0.4.1",
    "Protego==0.5.0",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    "pydantic_core==2.41.5",
    "PyDispatcher==2.0.7",
    "pyee==13.0.0",
    "PyMuPDF==1.24.13",
    "pyOpenSSL==25.3.0",
    "pypdf>=5.1.0,<6.0.0",
    "PySocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.18",
    "pytz==2025.2",
    "PyYAML==6.0.3",
    "queuelib==1.8.0",
    "regex==2025.11.3",
    "requests>=2.32.3",
    "requests-file==3.0.1",
    "Scrapy==2.13.4",
    "selenium==4.38.0",
    "service-identity==24.2.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8",
    "spider-client==0.0.27",
    "SQLAlchemy==2.0.36",
    "starlette==0.41.3",
    "striprtf==0.0.26",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tinysegmenter==0.3",
    "tld==0.13.1",
    "tldextract==5.3.0",
    "tomli==2.3.0",
    "tqdm==4.67.1",
    "trafilatura==2.0.0",
    "trio==0.32.0",
    "trio-websocket==0.12.2",
    "Twisted==25.5.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "uvicorn==0.32.1",
    "w3lib==2.3.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wrapt==1.17.3",
    "wsproto==1.3.2",
    "yarl==1.22.0",
    "youtube-transcript-api==1.2.3",
    "zope.interface==8.1.1",
    "iniconfig==2.3.0",
    "llama-cloud-services==0.6.54",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pytest==9.0.1",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "*"
ignore_errors = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "types-requests>=2.32.4.20260107",
]
